--- a/test_framework.yml
+++ b/test_framework.yml
@@ -1,28 +1,13 @@
 tests:
-- Basic addition test:
-    x_add: 5
-    y_add: 7
-    answer: 12
-
-- Basic2 addition test:
-    x_add: 12
-    y_add: 8
-    answer: 20
-
-- Negative addition test:
-    x_add: 5
-    y_add: -7
-    answer: -2
-
 - Execute jar test:
     jar_file: demo.jar
-    answer: "Suma de 11 y 5: 15\n"
+    answer: "Suma de 10 y 5: 15\n"
 
 - File existence test:
-    file_path: "./jar_test/suma_resultado.txt"
-    answer: True
+    file_path: "suma_resultado.txt"
+    answer: true
 
 - Content file test:
-    file_path: "./jar_test/suma_resultado.txt"
+    file_path: "suma_resultado.txt"
     answer: "Archivo Exportando y generado desde java\n"
     
